Determine algorithms for credential_response_encryption
Signed-off-by: Ogenbertrand <ogenbertrand@gmail.com>